Mobile Layout Issues. Fixed #10

--- a/modules/mod_akquickicons/css/akquickicons.css
+++ b/modules/mod_akquickicons/css/akquickicons.css
@@ -25,7 +25,12 @@
 	-moz-transition-duration: 0.8s;	
 }
 
-#cpanel div.icon a:hover, #cpanel div.icon a:focus, #cpanel div.icon a:active, .cpanel div.icon a:hover, .cpanel div.icon a:focus, .cpanel div.icon a:active {
+#cpanel div.icon a:hover,
+#cpanel div.icon a:focus,
+#cpanel div.icon a:active,
+.cpanel div.icon a:hover,
+.cpanel div.icon a:focus,
+.cpanel div.icon a:active {
 	background-color: whiteSmoke ;
 	background-position: 0;
 	-webkit-border-bottom-left-radius: 50% 20px;
@@ -100,4 +105,10 @@
 	width: 16px;
 	padding: 0;
 	margin-right: 5px;
+}
+
+@media screen and (max-width: 768px) {
+	.cpanel div.icon a {
+		padding: 5px;
+	}
 }
